student scedule updates

--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/DayPage.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/DayPage.jade
@@ -1,61 +1,3 @@
-params = self.getParams() || [];
-controller = self.getControllerName() || 'calendar';
-action = self.getActionName() || 'day';
-.chlk-calendar
-    .header
-        .header-container
-            .buttons-container
-                .buttons
-                    .calendar-today-container
-                        +ActionLinkWithPrepend(controller, action, params).calendar-today.week
-                    .prev-month-container
-                        if self.getPrevDate()
-                            -params.push(self.getPrevDate().format('mm-dd-yy'))
-                            +ActionLinkWithPrepend(controller, action, params).prev-month.week.teacher
-                            -params.pop()
-                        else
-                            A.prev-month.week.teacher
-                    .current-month-container.week
-                        label.current-month=self.getCurrentTitle()
-                    .next-month-container
-                        if self.getNextDate()
-                            -params.push(self.getNextDate().format('mm-dd-yy'))
-                            +ActionLinkWithPrepend(controller, action, params).next-month.week
-                        else
-                            A.next-month.week
-                    if !self.isNotMainCalendar()
-                        .calendar-day-container
-                            +ActionLink('calendar', 'day').calendar-day.week.pressed
-                                span.tooltip
-                        .calendar-week-container
-                            +ActionLink('calendar', 'week').calendar-week.week
-                                span.tooltip
-                        .calendar-month-container
-                            +ActionLink('calendar', 'month').calendar-month.week
-                                span.tooltip
-    .day-names.day
-        each item,i in self.getItems()
-            div(class=item.getTodayClassName()).day
-                if(item.getDate().getDate().getDay())
-                    p=item.getDate().format('DD')
-    .items
-        each item in self.getItems()
-            div(class = item.getTodayClassName()).gradient-cnt.item.week-day.day
-                ul
-                    items = item.getCalendarDayItems() || [];
-                    each calendarDayItem,i in items
-                        period = calendarDayItem.getAnnouncementClassPeriods()[0];
-                        +ActionLink('calendar', 'showDayPopUp', item.getDate().format('mm-dd-yy'), i)(class = period ? "" : "disabled").period-item.day
-                            if(item.getDate().getDate().getDay() == 0)
-                                .period-info=(i+1)
-                                span.time #{calendarDayItem.getPeriod().getStartTime()} - #{calendarDayItem.getPeriod().getEndTime()}
-                            else
-                                li
-                                    if(period)
-                                        clazz = period.getClassPeriod().getClazz();
-                                        .course-icon
-                                            +ClassImg(clazz.getCourse(), 45, 80)
-                                        .p-container
-                                            p.title.day-title
-                                                span=clazz.getName()
-
+div
+    actions = {currentAction: 'day', day: 'day', week: 'week', month: 'month'}
+    +Calendar(self, chlk.templates.calendar.announcement.DayCalendarBodyTpl, self.getModel(), 'calendar', actions, [])
