fixed developer profile

--- a/Chalkable.Web/assets/jade/activities/profile/DeveloperProfile.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/DeveloperProfile.jade
@@ -1,7 +1,8 @@
 .developer
     .info
-        h2 Base Info
         +ActionForm('account', 'profileSave')
+            h2 Base Info
+            span.hint *This info will appear in the App Store
             -id = self.id ? self.id.valueOf() : null
             +Hidden("id", id)
             div
@@ -14,7 +15,7 @@
                 label Developer web site
                 input(name="websitelink", value=self.webSite, class="validate[required, custom[url]]")
             div.align-right
-                Button Save
+                +Button().special-button.blue-button Save
         div.bg-line
 
 
