--- a/Chalkable.Web/assets/sass/partials/main/profile/_profile_calendar.scss
+++ b/Chalkable.Web/assets/sass/partials/main/profile/_profile_calendar.scss
@@ -56,7 +56,7 @@ BODY {
             &.student-discipline-view{
               .profile-info{
                 .person-info{
-                  lable{
+                  label{
                     display: block;
                     font-size: 18px !important;
                     position: relative;
