--- a/Chalkable.Web/assets/sass/partials/main/profile/_profile_apps.scss
+++ b/Chalkable.Web/assets/sass/partials/main/profile/_profile_apps.scss
@@ -11,7 +11,7 @@ BODY {
               top: -12px;
               .counter{
                 display: inline-block;
-                lable{
+                label{
                   margin-right: 15px;
                   font-size: 21px;
                 }
