update admin attendance charts

--- a/Chalkable.Web/assets/jade/activities/admin/HomePage.jade
+++ b/Chalkable.Web/assets/jade/activities/admin/HomePage.jade
@@ -154,7 +154,8 @@ selectedIds = topData.getSelectedIds();
                     series: [{
                         name: '',
                         data: self.getBudgetChartData(budget),
-                        innerSize: '59%'
+                        innerSize: '72%',
+                        size: '81%'
                     }]
                 }
             )#budget-chart
