--- a/Chalkable.Web/assets/jade/activities/profile/SchedulingPage.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/SchedulingPage.jade
@@ -1,10 +1,10 @@
-schedule = self.getSchedule()
+schedule = self.getUser()
 .loader-container
     .loader
     +UserProfileTopBar(self, 'schedule')
-    +RenderWith(self.getCalendar(), chlk.templates.calendar.announcement.DayPage)(
-        notMainCalendar = true,
-        controllerName = self.getControllerName(),
-        actionName = 'schedule',
-        params = [schedule.getId().valueOf()]
-    )
+    actions = {currentAction: 'daySchedule'}
+    if self.getControllerName() == 'students'
+        -actions.day= 'daySchedule';
+        -actions.week= 'weekSchedule';
+        -actions.month= 'monthSchedule';
+    +Calendar(self, chlk.templates.calendar.announcement.DayCalendarBodyTpl, self.calendar, self.getControllerName(), actions, [schedule.getId()])
