--- a/Chalkable.Web/assets/jade/controls/action-link.jade
+++ b/Chalkable.Web/assets/jade/controls/action-link.jade
@@ -1,6 +1,6 @@
 mixin ActionLink(controller, action)
     link = self.getLink(ria.__API.clone(arguments))
-    -attributes.href=attributes.href || 'javascript:'
+    -attributes.href=attributes.href || self.getHref(ria.__API.clone(arguments))
     -attributes['data-link'] = link
     A.action-link(attributes)
         block
@@ -9,7 +9,7 @@ mixin ActionLinkWithPrepend(controller, action, prependParams)
     args = ria.__API.clone(arguments)
     - [].splice.apply(args, [2, 1].concat(prependParams || []))
     link = self.getLink(args)
-    -attributes.href=attributes.href || 'javascript:'
+    -attributes.href=attributes.href || self.getHref(ria.__API.clone(arguments))
     -attributes['data-link'] = link
     A.action-link(attributes)
         block
@@ -31,7 +31,7 @@ mixin  ActionLinkButton(controller, action)
         span
             span
                 link = self.getLink(ria.__API.clone(arguments))
-                -attributes.href=attributes.href || 'javascript:'
+                -attributes.href=attributes.href || self.getHref(ria.__API.clone(arguments))
                 -delete attributes['class']
                 -attributes['data-link'] = link
                 a.action-link(attributes).not-blue
