--- a/Chalkable.Web/assets/jade/activities/calendar/BaseCalendar.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/BaseCalendar.jade
@@ -5,35 +5,47 @@ mixin Calendar(data, bodyTpl, bodyModel, controller, actions, params)
                 .buttons-container
                     .buttons
                         block
-                        +CalendarHeader(data, controller, actions, params)
+                        +CalendarHeader(data, controller, bodyModel, actions, params)
         .calendar-body
-            +RenderWith(bodyModel, bodyTpl)
+            +RenderWith(bodyModel, bodyTpl)(
+                userRole = data.getUserRole()
+                mainCalendar = true
+            )
 
-
-mixin CalendarHeader(data, controller, actions, params)
+mixin CalendarHeader(data, controller, bodyModel, actions, params)
     currentAction = actions.currentAction
+    todayAction = actions.todayAction || actions.currentAction
+        .calendar-today-container
+            -params.unshift('')
+            +ActionLinkWithPrepend(controller, todayAction, params).calendar-today.week=Msg.Today
+            -params.shift()
         .prev-month-container
-            if data.getPrevDate()
-                -params.unshift(data.getPrevDate().format('mm-dd-yy'))
+            if bodyModel.getPrevDate()
+                -params.unshift(bodyModel.getPrevDate().format('mm-dd-yy'))
                 +ActionLinkWithPrepend(controller, currentAction, params).prev-month.week.teacher
                 -params.shift()
             else
                 A.prev-month.week.teacher
         .current-month-container.week
-            label.current-month=data.getCurrentTitle()
+            label.current-month=bodyModel.getCurrentTitle()
         .next-month-container
-            if data.getNextDate()
-                -params.unshift(data.getNextDate().format('mm-dd-yy'))
+            if bodyModel.getNextDate()
+                -params.unshift(bodyModel.getNextDate().format('mm-dd-yy'))
                 +ActionLinkWithPrepend(controller, currentAction, params).next-month.week
+                -params.shift()
             else
                 A.next-month.week
         if actions.day && actions.week && actions.month
+            -params.unshift('')
             .calendar-day-container
-                +ActionLink(controller, actions.day)(class= actions.day == currentAction ? 'pressed' : '' ).calendar-day.week
+                +ActionLinkWithPrepend(controller, actions.day, params)(class = actions.day == currentAction ? 'pressed' : '').calendar-day.week
                     span.tooltip
+                    |#{Msg.Day}
             .calendar-week-container
-                +ActionLink(controller, actions.week)(class= actions.week == currentAction ? 'pressed' : '' ).calendar-week.week
+                +ActionLinkWithPrepend(controller, actions.week, params)(class = actions.week == currentAction ? 'pressed' : '').calendar-week.week
                     span.tooltip
+                    |#{Msg.Week}
             .calendar-month-container
-                +ActionLink(controller, actions.month)(class= actions.month == currentAction ? 'pressed' : '' ).calendar-month.week
+                +ActionLinkWithPrepend(controller, actions.month, params)(class = actions.month == currentAction ? 'pressed' : '').calendar-month.week
                     span.tooltip
+                    |#{Msg.Month}
