--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/MonthCalendarBody.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/MonthCalendarBody.jade
@@ -16,11 +16,15 @@
             p=Msg.Saturday
     .items
         each item in self.getItems()
-            +ActionLink('calendar', 'showMonthDayPopUp', item.getDate().format('mm-dd-yy'))(class = ((item.isSunday() ? 'sunday ' : ' ') + item.getClassName() + ' ' + item.getTodayClassName())).gradient-cnt.item
+            announcements = item.getAnnouncements()
+            itemsArr = item.getItemsArray()
+            disablePopUp = !self.isMainCalendar() || self.getUserRole().isStudent() && !announcements.length && !itemsArr.length
+            +ActionLink('calendar', 'showMonthDayPopUp', item.getDate().format('mm-dd-yy'))(
+                class = ((item.isSunday() ? 'sunday ' : ' ') + item.getClassName() + ' ' + item.getTodayClassName() + (disablePopUp ? ' disabled' : ''))
+            ).gradient-cnt.item
                 div
                     h2.number=item.getDay()
                     .space
-                    announcements = item.getAnnouncements();
                     max = 7;
                     if announcements.length > 0
                         ul(class=item.getRole()).day-announcements
@@ -32,7 +36,6 @@
                     ul.day-items
                         announcementsLen = announcements.length > 3 ? 3 : announcements.length;
                         maxLen = max - announcementsLen;
-                        itemsArr = item.getItemsArray();
                         each annItem,i in itemsArr
                             if i < maxLen || itemsArr.length <= maxLen
                                 li=annItem.title
