--- a/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
@@ -26,39 +26,46 @@
             .right
                 +ActionLinkList(self.getLinksDataForRightSide())
     .people-list-container.not-transparent
-        items = self.getItems()
-        .top.panel-bg
-            if(self.getItems().length > 0)
-                +ActionLinkWithPrepend('attendance', 'markAll',
-                    [selectedId.valueOf(), self.getItems()[0].getClassId().valueOf(), self.getDate().toStandardFormat()].concat(additionalParams)
-                )#all-present-link=Msg.Mark_all_Present
-        .action-bar.buttons.filter
-            .container.panel-bg
-                .left
-                    +ActionLinkWithPrepend('attendance', 'sortStudents', ['false'].concat(additionalParams))(class=self.isByLastName()?"":"pressed").action-button.first-last=Msg.First_name
-                    +ActionLinkWithPrepend('attendance', 'sortStudents', [true].concat(additionalParams))(class=self.isByLastName()?"pressed":"").action-button.first-last=Msg.Last_name
-        .grid-container.loader-container
-            +ListView(self.getItems())(
-                selectedIndex = 0
-            )#class-attendance-list-panel.people-list
-                needSuggestion = self.getItems().filter(function(item){return item.getType() > valuesEnum.NA.valueOf()}).length == 0;
-                each item, i in self.getItems()
-                    needPresent = (i == 0 && item.getType() == valuesEnum.NA.valueOf());
-                    .row(class=(i == 0 ? 'selected' : ''), index=i)
-                        if needPresent
-                            -item.setType(valuesEnum.PRESENT.valueOf());
-                        student = item.getStudent();
-                        +ActionLink('students', 'info', student.getId()).left.image-container.white.shadow
-                            +PersonImg(student, 47)
-                        p.left= student.getFullName()
-                        .right
-                            .student-attendance-container
-                                len = self.getItems().length;
-                                if (needSuggestion && (i== 5 || (i == len - 1 && len < 6 && len > 2)))
-                                    .keyboard-suggestion
-                                div(class="container-" + item.getStudentId().valueOf())
-                                    -item.setReasons(self.getReasons());
-                                    +RenderWith(item, self.getItemClassType())(
-                                        needPresent = needPresent
-                                    )
-                        .clear
+        +ActionForm('attendance', 'setClassAttendanceList').set-attendance-list-form
+            input(name="attendancesJson", type="hidden")
+            +Hidden('date', self.getDate().toStandardFormat())
+            +Hidden('classid', selectedId && selectedId.valueOf())
+            items = self.getItems()
+            .top.panel-bg
+                if(self.getItems().length > 0)
+                    +ActionLinkWithPrepend('attendance', 'markAll',
+                        [selectedId.valueOf(), self.getItems()[0].getClassId().valueOf(), self.getDate().toStandardFormat()].concat(additionalParams)
+                    )#all-present-link=Msg.Mark_all_Present
+                //+Button(href="javascript:", name="submitType", value="POST ATTENDANCES", type="submit", id="submit-attendance-button")
+                BUTTON(href="javascript:", name="submitType", type="submit", id="submit-attendance-button").chlk-button.action-button.message-button.blue-gradient-btn POST IT
+
+            .action-bar.buttons.filter
+                .container.panel-bg
+                    .left
+                        +ActionLinkWithPrepend('attendance', 'sortStudents', ['false'].concat(additionalParams))(class=self.isByLastName()?"":"pressed").action-button.first-last=Msg.First_name
+                        +ActionLinkWithPrepend('attendance', 'sortStudents', [true].concat(additionalParams))(class=self.isByLastName()?"pressed":"").action-button.first-last=Msg.Last_name
+            .grid-container.loader-container
+                +ListView(self.getItems())(
+                    selectedIndex = 0
+                )#class-attendance-list-panel.people-list
+                    needSuggestion = self.getItems().filter(function(item){return item.getType() > valuesEnum.NA.valueOf()}).length == 0;
+                    each item, i in self.getItems()
+                        needPresent = (i == 0 && item.getType() == valuesEnum.NA.valueOf());
+                        .row(class=(i == 0 ? 'selected' : ''), index=i)
+                            if needPresent
+                                -item.setType(valuesEnum.PRESENT.valueOf());
+                            student = item.getStudent();
+                            +ActionLink('students', 'info', student.getId()).left.image-container.white.shadow
+                                +PersonImg(student, 47)
+                            p.left= student.getFullName()
+                            .right
+                                .student-attendance-container
+                                    len = self.getItems().length;
+                                    if (needSuggestion && (i== 5 || (i == len - 1 && len < 6 && len > 2)))
+                                        .keyboard-suggestion
+                                    div(class="container-" + item.getStudentId().valueOf())
+                                        -item.setReasons(self.getReasons());
+                                        +RenderWith(item, self.getItemClassType())(
+                                            needPresent = needPresent
+                                        )
+                            .clear
