--- a/Chalkable.Web/assets/jade/controls/feed-item.jade
+++ b/Chalkable.Web/assets/jade/controls/feed-item.jade
@@ -23,7 +23,7 @@ mixin FeedItem(item, noDisabled)
                 +ActionLink('announcement', 'view', item.getId())(class = !noDisabled ? 'disabled' : '').d-b.t-d.not-blue.announcement-link
                     .item-type
                         .attachment
-                            div(class="announcement-type-" + item.getAnnouncementTypeId()).icon.blue
+                            div(class="announcement-type-" + item.getChalkableAnnouncementType()).icon.blue
                             div(
                                 data-tooltip=item.getAnnouncementTypeName() + (item.getAnnouncementTypeId() == chlk.models.announcement.AnnouncementTypeEnum.ADMIN.valueOf() ?
                                     ' ' + Msg.Announcement : '')
