--- a/Chalkable.Web/assets/jade/activities/notification/ListNewPopup.jade
+++ b/Chalkable.Web/assets/jade/activities/notification/ListNewPopup.jade
@@ -15,7 +15,7 @@
                 if item.getType() == chlk.models.notification.NotificationTypeEnum.ANNOUNCEMENT
                     .notification-announcement
                         +ActionLink('announcement', 'view', item.getAnnouncementId().valueOf())#notification-action
-                            div(class="announcement-type-" + item.getAnnouncementType()).icon.blue
+                            div(class="announcement-type-" + item.getChalkableAnnouncementType()).icon.blue
                         span= item.getAnnouncementTypeName()
 
             div(class=item.isShown()? 'content' : 'content unshown')
