--- a/Chalkable.Web/assets/jade/activities/profile/AssignmentsBlock.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/AssignmentsBlock.jade
@@ -2,7 +2,7 @@ a.periods-link.item
     .announcement-box
         each announcement,i in self.getAnnouncements()
             div(
-                class = "announcement-type-" + announcement.getAnnouncementTypeId(),
+                class = "announcement-type-" + announcement.getChalkableAnnouncementType(),
                 style = "bottom: " + (i*4) + "px;left: " + (20 + i*4) + "px; z-index: " + (97 - i),
                 data-tooltip = announcement.getAnnouncementTypeName()
             ).announcement
