--- a/Chalkable.Web/assets/sass/partials/main/_attendance.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_attendance.scss
@@ -598,7 +598,8 @@ BODY {
               float: right;
               padding-right: 25px;
               padding-left: 25px;
-              margin-top: 5px;
+              margin-top: 10px;
+              margin-right: 20px;
             }
             #all-present-link{
               margin-right: 25px;
