fixed sstudent/announcementView  dropped

--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
@@ -12,10 +12,10 @@ mixin AppAttachmentBlock(item, pictureHref, i)
     gradeViewApps = self.getGradeViewApps()
     if studentAnnouncementsInfo
         studentAnnouncements = studentAnnouncementsInfo.getItems()
-        gradingStyle = studentAnnouncementsInfo.getGradingStyle()
-        gradingMapping = studentAnnouncementsInfo.getMapping()
-        getGrade = function(value){return GradingStyler.getLetterByGrade(value, gradingMapping, gradingStyle)}
-        getGradeNumber = function(value){return GradingStyler.getGradeNumberValue(value, gradingMapping, gradingStyle)}
+        //gradingStyle = studentAnnouncementsInfo.getGradingStyle()
+        //gradingMapping = studentAnnouncementsInfo.getMapping()
+        //getGrade = function(value){return GradingStyler.getLetterByGrade(value, gradingMapping, gradingStyle)}
+        //getGradeNumber = function(value){return GradingStyler.getGradeNumberValue(value, gradingMapping, gradingStyle)}
     +FeedItem(self)
     .panel-bg
         .action-bar.buttons
@@ -30,7 +30,7 @@ mixin AppAttachmentBlock(item, pictureHref, i)
                     .comment-grade-container
                         .comment-grade
                             .comment=self.getComment() || Msg.Your_grade + ":"
-                            .grade-value=values.dropped ? Msg.Dropped : (getGrade(self.getGrade()) || '')
+                            .grade-value= self.isDropped() ? Msg.Dropped : (self.getGradeLetter() || '')
                         .comment-triangle
                             .white.comment-triangle
                 br
