fixed teacher attacments showing for student

--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementAppAttachments.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementAppAttachments.jade
@@ -35,5 +35,5 @@ each item, i in items
     if item.getType() == chlk.models.announcement.ApplicationOrAttachmentEnum.APPLICATION
         +AnnouncementFormApplicationItem(item, i)
     else
-        if item.isOwner()
+        if self.getUserRole().isTeacher() && item.isOwner() || self.getUserRole().isStudent() && !item.isOwner()
             +AnnouncementFormAttachmentItem(item, i)
