--- a/Chalkable.Web/assets/jade/activities/apps/app-picture.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-picture.jade
@@ -5,7 +5,7 @@ mixin Thumbnail(url, title, dimsX, dimsY, pictureCls, readOnly)
         +LoadingImage(src=url)
 
 
-mixin IconBox(id, url, title, dimsX, dimsY, pictureCls, readOnly)
+mixin IconBox(id, url, title, dimsX, dimsY, pictureCls, readOnly, tplLink)
     +Hidden('app' + title + 'Id', id.valueOf())
     if id.valueOf() || readOnly
         +Thumbnail(url, title, dimsX, dimsY, pictureCls, readOnly)
@@ -15,8 +15,6 @@ mixin IconBox(id, url, title, dimsX, dimsY, pictureCls, readOnly)
             .bottom
                 button.simple-gray-button.file=title
                     +FileUpload('apps', 'uploadPicture', [dimsX, dimsY, title]).simple-gray-button
-                +ActionLink('apps', 'd', id) Download Template
+                a(href=tplLink).download-link Download Template
 
-
-
-+IconBox(self.pictureId, self.pictureUrl, self.title, self.width, self.height, self.pictureClass, !self.editable)
++IconBox(self.pictureId, self.pictureUrl, self.title, self.width, self.height, self.pictureClass, !self.editable, self.templateDownloadLink)
