--- a/Chalkable.Web/assets/sass/partials/main/developer/_app.scss
+++ b/Chalkable.Web/assets/sass/partials/main/developer/_app.scss
@@ -208,7 +208,7 @@ BODY {
                           }
                         }
 
-                        .action-link{
+                        .download-link{
                           display: inline-block;
                           margin-top: 9px;
                         }
